# django_blog

./: .dockerignore  Dockerfile  pyproject.toml
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_status_and_more.py  0004_create_superuser.py
djangocourse/: settings.py
templates/app/: article_create_form.html  article_delete_form.html  article_update_form.html  base.html  create_article.html  home.html  index.html
templates/registration/: login.html
